<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ajout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.AjoutActivity">

    <TextView
        android:text="@string/lb_titre_ajout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/lb_titre_ajout"
        android:textSize="28sp"
        android:textColor="@android:color/secondary_text_light" />

    <TextView
        android:text="@string/lb_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/lb_nom_ajout"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_below="@+id/lb_titre_ajout"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/secondary_text_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_nom_ajout"
        android:textAlignment="center"
        android:layout_below="@+id/lb_nom_ajout"
        android:layout_alignParentStart="true"
        android:hint="@string/txt_nom_ajout" />

    <TextView
        android:text="@string/lb_frequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_nom_ajout"
        android:layout_centerHorizontal="true"
        android:id="@+id/lb_frequence_ajout"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@android:color/secondary_text_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_below="@+id/lb_frequence_ajout"
        android:layout_centerHorizontal="true"
        android:id="@+id/txt_frequence_ajout"
        android:textAlignment="center"
        android:hint="@string/txt_frequence_ajout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_lieu"
        android:id="@+id/lb_lieu_ajout"
        android:layout_below="@+id/txt_frequence_ajout"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_light" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_lieu_ajout"
        android:layout_below="@+id/lb_lieu_ajout"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:hint="@string/txt_lieu_ajout" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_ajout"
        android:id="@+id/btn_reset_ajout"
        android:layout_below="@+id/txt_lieu_ajout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:width="100sp"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/background_light" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ajouter_ajout"
        android:id="@+id/btn_ajouter_ajout"
        android:layout_alignTop="@+id/btn_reset_ajout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:width="100sp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/background_light" />
</RelativeLayout>
