<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jrme.gestionarrosage.UpdateActivity">

    <TextView
        android:text="@string/lb_titre_modif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/lb_titre_update"
        android:textSize="28sp"
        android:textColor="@android:color/secondary_text_light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/lb_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lb_nom_update"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/secondary_text_light"
        android:layout_below="@+id/lb_titre_update"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_nom_update"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:hint="@string/txt_nom_ajout"
        android:layout_below="@+id/lb_nom_update"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/lb_frequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lb_frequence_update"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@android:color/secondary_text_light"
        android:layout_below="@+id/txt_nom_update"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/txt_frequence_update"
        android:textAlignment="center"
        android:hint="@string/txt_frequence_ajout"
        android:layout_below="@+id/lb_frequence_update"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_lieu"
        android:id="@+id/lb_lieu_update"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@android:color/secondary_text_light"
        android:layout_below="@+id/txt_frequence_update"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_lieu_update"
        android:textAlignment="center"
        android:hint="@string/txt_lieu_ajout"
        android:layout_below="@+id/lb_lieu_update"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_ajout"
        android:id="@+id/btn_reset_update"
        android:width="100sp"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txt_lieu_update"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        android:id="@+id/btn_modifier_update"
        android:layout_alignTop="@+id/btn_reset_update"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/background_light"
        android:background="@android:color/holo_green_dark"
        android:width="100sp"
        android:layout_marginRight="50sp" />

</RelativeLayout>
