<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jrme.gestionarrosage.DetailActivity">

    <TextView
        android:text="@string/lb_titre_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/lb_titre_detail"
        android:textSize="28sp"
        android:textColor="@android:color/secondary_text_light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/lb_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/lb_nom_detail"
        android:textSize="24sp"
        android:textColor="@android:color/secondary_text_light"
        android:layout_below="@+id/lb_titre_detail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lb_nom_valeur_detail"
        android:textSize="20sp"
        android:layout_below="@+id/lb_nom_detail"
        android:layout_alignParentStart="true"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_frequence"
        android:id="@+id/lb_frequence_detail"
        android:layout_below="@+id/lb_nom_valeur_detail"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lb_frequence_valeur_detail"
        android:textSize="20sp"
        android:layout_below="@+id/lb_frequence_detail"
        android:layout_centerHorizontal="true"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_lieu"
        android:id="@+id/lb_lieu_detail"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        android:layout_below="@+id/lb_frequence_valeur_detail"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lb_lieu_valeur_detail"
        android:textSize="20sp"
        android:layout_below="@+id/lb_lieu_detail"
        android:layout_centerHorizontal="true"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lb_date_arrosage"
        android:id="@+id/lb_date_arrosage_detail"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        android:layout_below="@+id/lb_lieu_valeur_detail"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lb_date_arrosage_valeur_detail"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_below="@+id/lb_date_arrosage_detail"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:id="@+id/btn_delete_detail"
        android:layout_below="@+id/lb_date_arrosage_valeur_detail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/background_light"
        android:padding="10dp"
        android:width="100sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        android:id="@+id/btn_update_detail"
        android:layout_alignTop="@+id/btn_delete_detail"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:padding="10dp"
        android:layout_alignBottom="@+id/btn_delete_detail"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/background_light"
        android:width="100sp" />

</RelativeLayout>
